# iterm2-Tabs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_CN.md  README_EN.md  iterm2_tabs.spec  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md
scripts/: build_app.sh  build_pyinstaller.sh  bump-version.sh  release.sh
src/iterm2_tabs/: __init__.py  __main__.py  app.py  config.py  gui.py  iterm2_connection.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py
